<resources>
    <string name="app_name">Tip Time App</string>
    <string name="cost_hint_str">Cost of Service</string>
    <string name="service_question_str">How was the service?</string>
    <string name="amazing_radio_str">Amazing (+20%)</string>
    <string name="good_radio_str">Good (+18%)</string>
    <string name="ok_radio_str">OK (+15%)</string>
    <string name="round_up_question_str">Round up tip?</string>
    <string name="calculate_str">Calculate</string>
    <string name="tip_amount_str">Tip Amount</string>
</resources>