<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp">

        <EditText
            android:id="@+id/cost_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cost_hint_str"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/service_question_str" />

    <RadioGroup
        android:id="@+id/tips_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp">

        <RadioButton
            android:id="@+id/amazing_click"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/amazing_radio_str" />

        <RadioButton
            android:id="@+id/good_click"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good_radio_str" />

        <RadioButton
            android:id="@+id/ok_click"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok_radio_str" />
    </RadioGroup>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/round_tip_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:checked="true"
        android:text="@string/round_up_question_str" />

    <Button
        android:id="@+id/calculate_btn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/calculate_str" />

    <TextView
        android:id="@+id/result_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/tip_amount_str"
        android:layout_marginEnd="32dp" />
</LinearLayout>